--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==1.10.0
 
+      - name: Install libusb
+        if: runner.os == 'macOS'
+        run: brew install libusb libxml2
+
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
