--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: cp27-* pp*
+          CIBW_SKIP: cp27-* pp*
         # to supply options, put them in 'env', like:
         # env:
         #   CIBW_SOME_OPTION: value
