--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-10.15]
+        os: [macOS-10.15, macOS-11.2]
 
     steps:
       - uses: actions/checkout@v2
