--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-10.15, macOS-11.0]
+        os: [macOS-10.15, ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v2
