--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -27,16 +27,13 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y libusb-1.0-0-dev
+          sudo apt-get install -y libusb-dev
           sudo apt-get install -y libxml2-dev
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: cp27-* cp35* pp*
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
 
       - uses: actions/upload-artifact@v2
         with:
