--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -27,8 +27,9 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y libusb-dev
+          sudo apt-get install -y libusb-1.0-0-dev
           sudo apt-get install -y libxml2-dev
+          pkg-config --cflags libusb-1.0
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
