--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,18 +23,11 @@ jobs:
         if: runner.os == 'macOS'
         run: brew install libusb libxml2
 
-      - name: Install libusb and libxml2 on Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y libusb-1.0-0-dev
-          sudo apt-get install -y libxml2-dev
-          pkg-config --cflags libusb-1.0
-
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_SKIP: cp27-* cp35* pp*
+          CIBW_BEFORE_ALL_LINUX: apt-get install -y libusb-1.0-0-dev libxml2-dev
 
       - uses: actions/upload-artifact@v2
         with:
