--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -10,6 +10,10 @@ jobs:
       matrix:
         os: [macOS-10.15, ubuntu-20.04]
 
+    env:
+      CIBW_SKIP: "cp27-* cp35* pp* *-manylinux_i686"
+      CIBW_BEFORE_BUILD_LINUX: yum install -y libusb1-devel libxml2-devel gcc
+
     steps:
       - uses: actions/checkout@v2
 
@@ -25,9 +29,6 @@ jobs:
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
-        env:
-          CIBW_SKIP: cp27-* cp35* pp*
-          CIBW_BEFORE_BUILD_LINUX: yum install -y libusb1-devel libxml2-devel gcc
 
       - uses: actions/upload-artifact@v2
         with:
