--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -45,6 +45,10 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Install libusb on macOS
+        if: runner.os == 'Linux'
+        run: sudo apt-get install -y libusb-1.0-0-dev libxml2-dev
+
       - name: Build sdist
         run: python setup.py sdist
 
